add why best travel

--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -76,6 +76,38 @@
           </div>
       </div> 
     </div>
+<div>
+    <!-- WHY bestHotels -->
+    <!-- <div class="container-fluid"> -->
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="text-center">Why bestHotels?</h2>
+        </div>
+      </div>
+    <!-- </div> -->  
+    <br>
+    <!-- <div class="container-fluid"> -->
+      <div class="row">
+        <!-- <div class="col-md-12 col-xs-offset-9> -->
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2 text-center">
+              <img class="why" ng-src="/images/m.png" alt="best selection"/>
+            </div>
+            <div class="col-md-1 ">
+            </div>
+            <div class="col-md-2 text-center">
+              <img class="why" ng-src="/images/love.png" alt="compare prices"/>
+            </div>
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-2 text-center">
+              <img class="why" ng-src="/images/dog.png" alt="easy to use"/>
+            </div>
+            <div class="col-md-2">
+            </div>
+        <!-- </div>  -->   
+      </div>
  </div>
  
 
