--- a/best_hotels/client/css/style.css
+++ b/best_hotels/client/css/style.css
@@ -26,6 +26,11 @@
   float:right;
    /*filter: alpha(opacity=60);*/
 }
+.why{
+  height: 150px;
+  width: 150px;
+  /*border-radius: 50%;*/
+}
 
 
 .navig{
