add titel and description why bestHotels?

--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -108,6 +108,44 @@
             </div>
         <!-- </div>  -->   
       </div>
+      <div class="row">
+         <div class="col-md-2">
+            </div>
+            <div class="col-md-2 ">
+              <h3 class="text-center">Best Selection</h3>
+            </div>
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-2 ">
+              <h3 class="text-center">Compare Prices</h3>
+            </div>
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-2 ">
+              <h3 class="text-center">Easy to Use</h3>
+            </div>
+            <div class="col-md-2">
+            </div>
+       </div>
+       <div class="row">
+         <div class="col-md-2">
+            </div>
+            <div class="col-md-2 ">
+              <p class="text-center">Search thousands of travel websites instantly.</p>
+            </div>
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-2 ">
+              <p class="text-center">Quickly compare prices across hotels providers.</p>
+            </div>
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-2 ">
+              <p class="text-center">Nulla meatball shoulder ea beef sed chuck, ullamco.</p>
+            </div>
+            <div class="col-md-2">
+            </div>
+       </div>
  </div>
  
 
