--- a/best_hotels/client/css/style.css
+++ b/best_hotels/client/css/style.css
@@ -27,9 +27,9 @@
    /*filter: alpha(opacity=60);*/
 }
 .why{
-  height: 150px;
-  width: 150px;
-  /*border-radius: 50%;*/
+  /*height: 150px;
+  width: 150px;*/
+  border-radius: 50%;
 }
 
 
