--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -146,6 +146,9 @@
             <div class="col-md-2">
             </div>
        </div>
+       <div class="col-md-12">
+         <h2 class="text-center">Explore the world</h2>
+       </div>
  </div>
  
 
