adding filters indexpage

--- a/best_hotels/client/css/style.css
+++ b/best_hotels/client/css/style.css
@@ -48,9 +48,16 @@
   font-size: 18px;
   letter-spacing: 1px;
 }
+.logoindex{
+  padding-top: 20px;
+  font-size: 18px;
+  letter-spacing: 1px;
+  color: black;
+}
 
 .nav>li>a {
   color: white;
+ /* color: black;*/
 }
  ul{
   list-style-type: none;
@@ -68,8 +75,24 @@
   text-decoration: none;
 }
 
+.black{
+  color: black;
+}
+.searchindex{
+  padding-top: 15px;
+}
 
-
+/**************INDEX PAGE NAVIGATIN BAR***************/
+/**/
+input[type="range"]:before {
+    content: attr(min) " ";
+}
+input[type="range"]:after {
+    content: " " attr(max);
+}
+.colindex{
+  width: 50px;
+}
 #search{
   position: absolute;
 
