--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -1,29 +1,6 @@
 <slider images = "images">
   
 </slider>
-<!-- <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="col-md-2">
-        <h3 class="white">best<span class="white">HOTELS</span></h3>
-      </div>
-      <div class="col-md-4">
-      </div>
-      <div class="col-md-2">
-        <h3>Host</h3>
-      </div>
-      <div class="col-md-2">
-        <h3 class="white">My list </h3>
-      </div>
-      <div class="col-md-2">
-        <h3 class="white">SingIn</h3>
-      </div>
-    </div>
-    
-  </div>
-
-  
-</div> -->
 
   <div class="navleft">
     <ul>
@@ -37,8 +14,6 @@
        <li role="presentation"><a href="#">Host</a></li>
       </ul>
     </div>
-  
-
 
 <div class="container-fluid">
   <div class="col-md-12">
@@ -150,6 +125,12 @@
          <h2 class="text-center">Explore the world</h2>
        </div>
  </div>
+<!--  <div>
+  <li ng-repeat="hotel in hotels">
+    {{}}
+  </li>
+   
+ </div> -->
  
 
 
