--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -20,24 +20,24 @@
     <div class="row">
      <div id="sbox">
      </div>
-          <div id="search">
+          <form id="search" ng-submit="searchHotel(location)">
              <div class="form-group col-md-4" ng-class="search">
-               <input autofocus type="text" name="search" class="form-control" ng-model="search" placeholder="Where do you want to go?">
+               <input autofocus type="text" name="search" class="form-control" ng-model="location.search" placeholder="Where do you want to go?">
              </div>
               <div class="form-group col-md-2">
-                <input autofocus type="date" name="search" class="form-control" ng-model="calendar" placeholder="Check In?">
+                <input autofocus type="date" name="search" class="form-control" ng-model="location.calendar" placeholder="Check In?">
               </div>
                <div class="form-group col-md-2">
-                <input autofocus type="date" name="search" class="form-control" ng-model="calendar1">
+                <input autofocus type="date" name="search" class="form-control" ng-model="location.calendar1">
               </div>
               <div class="form-group col-md-2">
-                      <select class="form-control" name="guest" id="guest" ng-model="guest" ng-options="option.name for option in options" ng-init="guest = options[1]"> 
+                      <select class="form-control" name="guest" id="guest" ng-model="location.guest" ng-options="option.name for option in options" ng-init="guest = options[1]"> 
                       </select>
               </div>
               <div class="form-group col-md-2">
                    <input type="submit" value="Search" class="searchButton">
               </div>
-          </div>
+          </form>
       </div> 
     </div>
 <div>
