displying search data no style

--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -31,7 +31,7 @@
                 <input autofocus type="date" name="search" class="form-control" ng-model="location.calendar1">
               </div>
               <div class="form-group col-md-2">
-                      <select class="form-control" name="guest" id="guest" ng-model="location.guest" ng-options="option.name for option in options" ng-init="guest = options[1]"> 
+                      <select class="form-control" name="guest" id="guest" ng-model="guest" ng-options="option.name for option in options" ng-init="guest = options[1]"> 
                       </select>
               </div>
               <div class="form-group col-md-2">
