add ng-model for photos input

--- a/best_hotels/client/js/templates/hotels/new.html
+++ b/best_hotels/client/js/templates/hotels/new.html
@@ -513,7 +513,7 @@
               </div> 
               <div class="row">
                 <div class="form-group col-md-3">
-                  <input type="hidden" role="uploadcare-uploader"
+                  <input type="hidden" ng-model="hotel.photos" role="uploadcare-uploader"
                   data-images-only="true"
                   data-multiple="true"/>
                 </div>
