--- a/best_hotels/client/js/templates/hotels/index.html
+++ b/best_hotels/client/js/templates/hotels/index.html
@@ -456,11 +456,11 @@
   <p>zip {{hotel.zip}}</p>
   <p>star rating {{hotel.starRating}}</p>
   <p>phone {{hotel.phone}}</p>
-   <img ng-src="{{hotel.photos}}" alt="hotel"></p>
+   <!-- <img ng-src="{{hotel.photos}}" alt="hotel"></p> -->
     
-    <!-- <div ng-repeat="photo in hotel.photos">
-      <img ng-src="{{photo.photos}}">
-    </div> -->
+    <div ng-repeat="photo in hotel.photos">
+      <img ng-src="{{photo}}">
+    </div>
 
     <div ng-repeat="(key,value) in hotel.amenities">
       <div ng-show="value==true">{{key}}:{{value}}</div>
