--- a/best_hotels/client/js/templates/hotels/new.html
+++ b/best_hotels/client/js/templates/hotels/new.html
@@ -14,15 +14,15 @@
      <p ng-repeat="error in errors">{{error}}</p>
    </div>
     <div class="row">
-      <div class="col-md-12 page-header">
+<!--       <div class="col-md-12 page-header">
         <h3>Registrant</h3>
-      </div>
+      </div> -->
         <div>
        <!--  ng-submit="submitForm(hotelForm.$valid)"novalidate -->
           <form name="hotelForm" ng-submit="addHotel(hotel)" >
             <div class="container">
              <div class="row">
-              <div class="form-group col-md-6" ng-class="{'has-error' : hotelForm.hotelname.$invalid && !hotelForm.hotelname.$pristine ,'has-success' : hotelForm.hotelname.$valid }">
+              <!-- <div class="form-group col-md-6" ng-class="{'has-error' : hotelForm.hotelname.$invalid && !hotelForm.hotelname.$pristine ,'has-success' : hotelForm.hotelname.$valid }">
                  <label class="control-label" for="hotelname">Username</label>
                  <input autofocus type="text" name="username" class="form-control" ng-model="hotel.username" ng-required="true" id="username" ng-minlength="3" ng-maxlength="12">
                 <p ng-show="hotelForm.username.$error.minlength" class="help-block">Username is too short, has to be more then two characters.</p>
