Add email password and facebook auth strategies

--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -11,7 +11,7 @@
       <ul class="nav">
        <li role="presentation"><a href="#">Log In</a></li>
        <li role="presentation"><a href="#">My List</a></li>
-       <li role="presentation"><a href="#">Host</a></li>
+       <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
       </ul>
     </div>
 
@@ -114,12 +114,7 @@
          <h2 class="text-center">Explore the world</h2>
        </div>
  </div>
-<!--  <div>
-  <li ng-repeat="hotel in hotels">
-    {{}}
-  </li>
-   
- </div> -->
- 
 
-
+<!-- Access user picture -->
+<!--  <img ng-src="{{user.picture}}" alt="" width="300px">
+ -->
