--- a/best_hotels/client/css/style.css
+++ b/best_hotels/client/css/style.css
@@ -86,90 +86,6 @@
   padding-top: 15px;
 }
 
-/**************INDEX PAGE NAVIGATIN BAR***************/
-/**/
-
-.colindex{
-  width: 50px;
-}
-#search{
-  position: absolute;
-
-  /*margin-top: 540px;*/
-  margin-top: 490px;
-  width: 100%;
- /* z-index: 0;*/
-}
-#navblack{
-  color: black;
-  margin-left: -40px;
-}
-/*sliding images*/
-.slide.ng-hide-add,
-.slide.ng-hide-remove {
-  -webkit-transition: all linear 0.5s;
-  -moz-transition: all linear 0.5s;
-  -o-transition: all linear 0.5s;
-  transition: all linear 0.5s;
-  display: block!important;
-}
-.slide.ng-hide-add.ng-hide-add-active,
-.slide.ng-hide-remove {
-  opacity: 0;
-}
-.slide.ng-hide-add,
-.slide.ng-hide-remove.ng-hide-remove-active {
-  opacity: 1;
-}
-/*end sliding images*/
-
-{
-  font-family: 'Open Sans', sans-serif;
-}
-.center-grey {
-  background: #f2f2f2;
-}
-/*.slider {
-  position: relative;
-  padding: 5px;
-  width: 610px;
-  margin: auto;
-  margin-top: 40px;
-}*/
-.slider {
-   position: static;
-  /*padding: 5px;*/
-  width: 100px;
- /* margin: auto;*/
-  margin-top: 0px;
-}
-.slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-shadow: 0px 0px 15px #999;
-}
-.arrows {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-}
-.arrows img {
-  height: 32px;
-}
-h1 {
-  text-align: center;
-  padding: 10px;
-  font-size: 40px;
-  color: #222;
-}
-
-
-
-
-
-
-
 /*SEARCH BUTTON*/
 .searchButton {
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fc8d83), color-stop(1, #e4685d));
@@ -289,6 +205,129 @@ h1 {
   top:1px;
   padding: 10px;
 }
+
+/**************INDEX PAGE NAVIGATIN BAR***************/
+/**/
+
+.colindex{
+  width: 50px;
+}
+#search{
+  position: absolute;
+
+  /*margin-top: 540px;*/
+  margin-top: 490px;
+  width: 100%;
+ /* z-index: 0;*/
+}
+#navblack{
+  color: black;
+  margin-left: -40px;
+}
+/*sliding images*/
+.slide.ng-hide-add,
+.slide.ng-hide-remove {
+  -webkit-transition: all linear 0.5s;
+  -moz-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
+  transition: all linear 0.5s;
+  display: block!important;
+}
+.slide.ng-hide-add.ng-hide-add-active,
+.slide.ng-hide-remove {
+  opacity: 0;
+}
+.slide.ng-hide-add,
+.slide.ng-hide-remove.ng-hide-remove-active {
+  opacity: 1;
+}
+/*end sliding images*/
+
+{
+  font-family: 'Open Sans', sans-serif;
+}
+.center-grey {
+  background: #f2f2f2;
+}
+/*.slider {
+  position: relative;
+  padding: 5px;
+  width: 610px;
+  margin: auto;
+  margin-top: 40px;
+}*/
+.slider {
+   position: static;
+  /*padding: 5px;*/
+  width: 100px;
+ /* margin: auto;*/
+  margin-top: 0px;
+}
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: 0px 0px 15px #999;
+}
+.arrows {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+.arrows img {
+  height: 32px;
+}
+h1 {
+  text-align: center;
+  padding: 10px;
+  font-size: 40px;
+  color: #222;
+}
+
+
+
+
+
+
+
+
+
+/*MORE FILTERS*/
+.filter {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+  background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
+  background-color:#ffffff;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  cursor:pointer;
+  color:#666666;
+  font-family:Arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:6px 12px;
+  text-decoration:none;
+}
+.myButton:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+  background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
+  background-color:#f6f6f6;
+}
+.myButton:active {
+  position:relative;
+  top:1px;
+}
+
+
 
 
 
