--- a/best_hotels/client/js/templates/hotels/index.html
+++ b/best_hotels/client/js/templates/hotels/index.html
@@ -462,6 +462,9 @@
     <div ng-repeat="photo in hotel.photos">
       <img ng-src="{{photo}}">
     </div>
+    <sliderhotels>
+  
+    </sliderhotels>
 
     <div ng-repeat="(key,value) in hotel.amenities">
       <div ng-show="value==true">{{key}}:{{value}}</div>
@@ -470,4 +473,5 @@
       <div ng-show="value==true">{{key}}:{{value}}</div>
     </div>
 </div>
+
 </div>
