--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -1,15 +1,14 @@
 <slider images = "images">
-  
-</slider>
 
+</slider>
   <div class="navleft">
     <ul>
-      <li role="presentation" class="logo"><a href="#">bestHotels</a></li>
+      <li   class="logo"><a ng-href="/auth/signup.html">bestHotels</a></li>
     </ul>
   </div>
     <div class="navig">
       <ul class="nav">
-       <li role="presentation"><a href="#">Log In</a></li>
+       <li role="presentation"><a ng-href="/auth/login.html">Log In</a></li>
        <li role="presentation"><a href="#">My List</a></li>
        <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
       </ul>
