--- a/best_hotels/client/js/templates/hotels/new.html
+++ b/best_hotels/client/js/templates/hotels/new.html
@@ -1,5 +1,11 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
+      <ul>
+      <li class="logo"><a ng-href="/home.html" id="navblack" class="logoindexhref">bestHotels</a>
+      </li>
+      <li role="presentation" class="logoindex"><a ng-href="/home.html" id="navblack" class="logoindexhref">Logout</a>
+      </li>
+    </ul>
   </div>
 </nav>  
   <div class="container top">
