--- a/best_hotels/client/js/templates/sliderhotels.html
+++ b/best_hotels/client/js/templates/sliderhotels.html
@@ -2,11 +2,11 @@
     <!-- <div class="slide" ng-repeat="image in images" ng-show="image.visible">
       <img class="bigimg" ng-src="/images/{{image.src}}" />
     </div> -->
-    <div ng-repeat=" hotel in hotels">
+    <!-- <div ng-repeat=" hotel in hotels">
       <div class="slide" ng-repeat="photo in hotel.photos" ng-show="photo.visible">
         <img ng-src="{{photo.src}}">
       </div>
-    </div>
+    </div> -->
     <div class="arrows">
       <a href="#" ng-click="prev()">
         <img src="/images/left-arrow.png" />
