--- a/best_hotels/client/js/templates/hotels/home.html
+++ b/best_hotels/client/js/templates/hotels/home.html
@@ -1,7 +1,7 @@
 <slider images = "images">
 
 </slider>
-  <div class="navleft">
+  <!-- <div class="navleft">
     <ul>
       <li   class="logo"><a ng-href="/auth/signup.html">bestHotels</a></li>
     </ul>
@@ -12,7 +12,32 @@
        <li role="presentation"><a href="#">My List</a></li>
        <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
       </ul>
+    </div> -->
+
+  <nav>
+    <div class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <ul>
+                <li role="presentation" class="logoindex"><a ng-href="/home.html" id="navblack">bestHotels</a>
+                </li>
+              </ul>
+            </div>
+               <ul class="nav navbar-nav pull-right">
+                    <li><a href="#">My Favorites</a></li>
+                    <li><a href="#">User Name</a></li>
+                    <li role="presentation" class="pull-right"><a ng-href="/auth/login.html">Sign Up</a>
+                    </li>
+                    <li role="presentation" class="pull-right"><a ng-href="/auth/signup.html">Log In</a>
+                    </li>
+                     <li role="presentation" class="pull-right"><a ng-href="/home">Logout</a>
+                    </li>
+                    <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
+                    <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
+               </ul>
+        </div><!-- /.container-fluid -->
     </div>
+  </nav>
 
 <div class="container-fluid">
   <div class="col-md-12">
@@ -115,5 +140,5 @@
  </div>
 
 <!-- Access user picture -->
-<!--  <img ng-src="{{user.picture}}" alt="" width="300px">
- -->
+ 
+
