--- a/best_hotels/client/js/templates/hotels/show.html
+++ b/best_hotels/client/js/templates/hotels/show.html
@@ -1,3 +1,26 @@
-<h1>Please work</h1>
+  <nav>
+    <div class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <ul>
+                <li role="presentation" class="logoindex"><a ng-href="/home.html" id="navblack">bestHotels</a>
+                </li>
+              </ul>
+            </div>
+               <ul class="nav navbar-nav pull-right">
+                    <li><a href="#">My Favorites</a></li>
+                    <li><a href="#">User Name</a></li>
+                    <li role="presentation" class="pull-right"><a ng-href="/auth/login.html">Sign Up</a>
+                    </li>
+                    <li role="presentation" class="pull-right"><a ng-href="/auth/signup.html">Log In</a>
+                    </li>
+                     <li role="presentation" class="pull-right"><a ng-href="/home">Logout</a>
+                    </li>
+                    <li role="presentation"><a href="#">Host {{user.displayName}}</a></li>
+                    <img class = "profileimage"ng-src="{{user.picture}}" alt="" width="40px" height="40px">
+               </ul>
+        </div><!-- /.container-fluid -->
+    </div>
+  </nav>
 <h1>See some information about {{hotel}}</h1>
 
